Update details of info

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-title: Yi ZOU's Homepage
-description: Hi
+title: Yi ZOU (Joey) - Academic Homepage
+description: "Academic homepage of Yi ZOU (Joey) - MPhil student at HKUST (Guangzhou)."
+timezone: Asia/Shanghai
